--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.17.1",
     "element-ui": "^2.0.11",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
@@ -33,7 +34,7 @@
     "html-webpack-plugin": "^2.30.1",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.7.2",
-    "sass-loader": "^6.0.6",    
+    "sass-loader": "^6.0.6",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
